# oxidizedsupport

./: README.md
api/: .env  Cargo.toml
api/migrations/2020-01-24-150731_create_users_table/: down.sql  up.sql
api/src/: lib.rs  main.rs  schema.rs  ticket.rs  user.rs
app/: .gitignore  README.md  angular.json  package-lock.json  package.json  proxy.config.js
app/e2e/src/: app.e2e-spec.ts
app/src/: hmr.ts  index.html  main.ts  styles.scss  theme.scss
app/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  auth.guard.ts
app/src/app/components/comment/: comment.component.html  comment.component.scss  comment.component.ts
app/src/app/components/create-ticket-modal/: create-ticket-modal.component.html  create-ticket-modal.component.scss  create-ticket-modal.component.ts
app/src/app/components/edit-ticket-modal/: edit-ticket-modal.component.html  edit-ticket-modal.component.scss  edit-ticket-modal.component.spec.ts  edit-ticket-modal.component.ts
app/src/app/components/header/: header.component.html  header.component.scss
app/src/app/components/inbox/: inbox.component.html  inbox.component.scss  inbox.component.spec.ts  inbox.component.ts
app/src/app/components/ticket-card/: ticket-card.component.html  ticket-card.component.scss  ticket-card.component.ts
app/src/app/services/: comment-state.service.spec.ts  comment-state.service.ts  search-params-state.service.spec.ts  search-params-state.service.ts  ticket-state.service.spec.ts  ticket-state.service.ts  user.service.ts
(+5 files in other folders)
