[package]
name = "api"
version = "0.1.0"
authors = ["Gerald Murphy <gerald.murphy@centeva.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
diesel = { version = "1.4.6", features = ["postgres"] }
dotenv = "0.9.0"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
rocket_contrib = "0.4.2"